[package]
name = "example-indexer"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "=0.11.0-beta.2"
openssl-probe = { version = "0.1.2" }
tokio = { version = "1.1", features = ["sync"] }

serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"

near-indexer = { git = "https://github.com/near/nearcore" }
